@@ -1,3 +1,4 @@
+7/18/14 clean up wiring of coefficients observer
 7/18/14 move responsibility for observing Equation.balanced into RightArrowNode
 7/18/14 wire BCEFaceNode to Equation.balancedProperty instead of coefficients
 7/18/14 #78 Equation: don't call observer until it has been added to all coefficients
